@@ -241,3 +241,61 @@ FORM_ERROR_MARKER = '_pfg_form_error'
 # apply the publisher exception hook wrapper to support embedded
 # forms in Plone 2.5?
 PLONE_25_PUBLISHER_MONKEYPATCH = False
+
+# HTML5 autocomplete attribute values
+AUTOCOMPLETE_VALUES = [
+    u"",
+    u"additional-name",
+    u"address-level1",
+    u"address-level2",
+    u"address-level3",
+    u"address-level4",
+    u"address-line1",
+    u"address-line2",
+    u"address-line3",
+    u"bday",
+    u"bday-day",
+    u"bday-month",
+    u"bday-year",
+    u"cc-additional-name",
+    u"cc-csc",
+    u"cc-exp",
+    u"cc-exp-month",
+    u"cc-exp-year",
+    u"cc-family-name",
+    u"cc-given-name",
+    u"cc-name",
+    u"cc-number",
+    u"cc-type",
+    u"country",
+    u"country-name",
+    u"current-password",
+    u"email",
+    u"family-name",
+    u"given-name",
+    u"honorific-prefix",
+    u"honorific-suffix",
+    u"impp",
+    u"language",
+    u"name",
+    u"new-password",
+    u"nickname",
+    u"organization",
+    u"organization-title",
+    u"photo",
+    u"postal-code",
+    u"sex",
+    u"street-address",
+    u"tel",
+    u"tel-area-code",
+    u"tel-country-code",
+    u"tel-extension",
+    u"tel-local",
+    u"tel-local-prefix",
+    u"tel-local-suffix",
+    u"tel-national",
+    u"transaction-amount",
+    u"transaction-currency",
+    u"url",
+    u"username",
+]
