@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <metadata>
-  <version>171</version>
+  <version>172</version>
   <dependencies>
       <dependency>profile-plone.app.jquerytools:default</dependency>
       <dependency>profile-collective.js.jqueryui:default</dependency>
